# realtime-fraud-detection

./: .gitignore  README.md  demo.py  deploy.sh  deploy_local.sh  deploy_placeholder.sh  docker-compose.yml  package.json  pyproject.toml  requirements.txt  streamlit_app.py  ultra_simple_app.py
.streamlit/: config.toml
data/: synthetic_events.jsonl
deploy/: config.toml
docker/: Dockerfile
placeholder/: index.html  vercel.json
scripts/: run_api.sh  run_streamlit.sh  run_tests.sh  simulate_stream.sh
src/: api.py  streaming_features.py
src/utils/: logging_utils.py  state_store.py  time_utils.py  validation_utils.py
tests/: test_realtime_engine.py
