[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "realtime-fraud-detection"
version = "1.0.0"
description = "Real-Time Feature Engineering for Fraud Detection with Streamlit UI"
authors = [
    {name = "Real-Time Fraud Detection Team", email = "team@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "requests>=2.25.0",
    "python-multipart>=0.0.5",
    "httpx>=0.20.0",
    "streamlit>=1.28.0",
    "pandas>=1.5.0",
    "plotly>=5.15.0",
]

[project.urls]
Homepage = "https://github.com/anix-lynch/realtime-fraud-detection"
Repository = "https://github.com/anix-lynch/realtime-fraud-detection"
"Bug Tracker" = "https://github.com/anix-lynch/realtime-fraud-detection/issues"
"Streamlit App" = "https://share.streamlit.io/anix-lynch/realtime-fraud-detection/main/streamlit_app.py"

[project.scripts]
fraud-api = "src.api:main"
fraud-demo = "demo:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
